# mimo-crypto-research

./: LICENSE  README.md  pyproject.toml
docs/: application_description.txt
seeds/: default.txt
src/mimo_research/: __init__.py  cli.py  config.py  dashboard.py  scanner.py
src/mimo_research/agents/: __init__.py  alert_watcher.py  base.py  contract_checker.py  discoverer.py  reporter.py  risk_analyst.py
src/mimo_research/core/: __init__.py  db.py  events.py  llm.py  models.py
src/mimo_research/services/: fetcher.py  scoring.py
tests/: test_db.py  test_events.py  test_scoring.py
