[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimo-crypto-research"
version = "3.0.0"
description = "Event-driven multi-agent crypto scanner with watchlist, portfolio tracking, and comparative scoring — powered by Xiaomi MiMo V2.5."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "garok-dev" }]
requires-python = ">=3.10"
keywords = ["crypto", "ai-agent", "event-driven", "scanner", "llm", "mimo", "defi"]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "click>=8.1",
    "fastapi>=0.111",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
chainscout = "mimo_research.cli:main"

[project.urls]
Homepage = "https://github.com/garok-dev/mimo-crypto-research"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
